# donna-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README-01-05-25.md  README.md  tarpaulin-report.html  todo.txt
.cargo/: config.toml
.github/workflows/: ci.yaml  main-merge.yaml  release.yaml
.pm/: project.toml
src/: config_io.rs  env_setup.rs  errors.rs  lib.rs  main.rs  utils.rs
src/sh/: bash_completion.sh  zsh_completion.sh
tests/: ai_test.rs  builder_and_opener_tests.rs  creation_tests.rs  integration_tests.rs  update_tests.rs  utils.rs
