[package]
name = "cli-project-manager"
version = "0.1.0"
edition = "2021"
default-run = "cli-project-manager"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
mlua = { version = "0.10.3", features = ["lua54", "vendored"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
trash = "5.2.2"
# config = "0.15.7"
