[package]
name = "donna"
version = "0.0.22"
edition = "2021"
default-run = "donna"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clap_complete = "4.5.48"
env_logger = "0.11.8"
log = "0.4.27"
mlua = { version = "0.10.3", features = ["lua54", "vendored"] }
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.19"
trash = "5.2.2"
# config = "0.15.7"
